--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,3 @@
 PORT = 4000
 PORT_ENV = DEVELOPMENT
+DB_URL = mongodb+srv://ankur94527:94505440@cluster0.a6bs6.mongodb.net/wecando?retryWrites=true&w=majority
